IS-11064 added model

--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -2059,6 +2059,13 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FuelstationList'
+              examples:
+                Example 1:
+                  value: {}
         '403':
           description: Forbidden
         '404':
