--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -2089,6 +2089,7 @@ paths:
             type: string
           in: query
           name: supplier_code
+          required: true
 components:
   schemas:
     CardInput:
